simple scrollbar fix (#308)

--- a/src/HighTable.module.css
+++ b/src/HighTable.module.css
@@ -16,7 +16,6 @@
   .table-scroll {
     flex: 1;
     overflow: auto;
-    scrollbar-gutter: stable both-edges;
     & > div {
       position: relative;
     }
